refactor: remove commons-io dependency